--- a/NORIC_national_weeklyProcedures.jrxml
+++ b/NORIC_national_weeklyProcedures.jrxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version last-->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="NORIC_weeklyProcedures" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="no.skde.tools.report.ProcessNowebRapporteket" uuid="334d651a-6c7d-4382-8db8-edbe0421acda">
+<!-- Created with Jaspersoft Studio version 5.6.1.final using JasperReports Library version 5.6.1  -->
+<!-- 2014-09-24T14:27:34 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="NORIC_national_weeklyProcedures" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="no.skde.tools.report.ProcessNowebRapporteket" uuid="334d651a-6c7d-4382-8db8-edbe0421acda">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -22,7 +23,7 @@
 		<defaultValueExpression><![CDATA[$P{LoggedInUser}.getAttributes().get(1).attrValue]]></defaultValueExpression>
 	</parameter>
 	<parameter name="reportFileName" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new String("NORIC_weeklyProcedures")]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new String("NORIC_national_weeklyProcedures")]]></defaultValueExpression>
 	</parameter>
 	<parameter name="useKnitr" class="java.lang.Integer" isForPrompting="false">
 		<parameterDescription><![CDATA[Set to 1 if Knitr processing, 0 if Sweave]]></parameterDescription>
@@ -52,11 +53,11 @@
 				<textFieldExpression><![CDATA["Melding: " + $P{REPORT_SCRIPTLET}.getJasperReportFeedback()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="80" y="0" width="400" height="30" uuid="94e7a307-1bbc-4c2f-841d-46342d123cf2"/>
+				<reportElement x="40" y="0" width="470" height="30" uuid="94e7a307-1bbc-4c2f-841d-46342d123cf2"/>
 				<textElement textAlignment="Center">
 					<font size="20"/>
 				</textElement>
-				<text><![CDATA[NORIC Stentbruk]]></text>
+				<text><![CDATA[NORIC: antall prosedyrer inneværende uke]]></text>
 			</staticText>
 		</band>
 	</title>
